--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/greekyogurt.html">Greek Yogurt</a>
+        <ul>
+            <li><a href="recipes/greekyogurt.html">Greek Yogurt</a></li>
+            <li><a href="recipes/grilledchicken.html">Grilled Chicken</a></li>
+            <li><a href="recipes/omelette.html">Omelette</a></li>
+        </ul>
+
     </body>
 </html>
