--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <div class="pagetitle">Odin Recipes</h1>
         <ul>
             <li><a href="recipes/greekyogurt.html">Greek Yogurt</a></li>
             <li><a href="recipes/grilledchicken.html">Grilled Chicken</a></li>
