--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     </head>
 
     <body>
-        <div class="pagetitle">Odin Recipes</h1>
-        <ul>
-            <li><a href="recipes/greekyogurt.html">Greek Yogurt</a></li>
-            <li><a href="recipes/grilledchicken.html">Grilled Chicken</a></li>
-            <li><a href="recipes/omelette.html">Omelette</a></li>
-        </ul>
+        <div class="page-title">Odin Recipes</div>
+        <div class="food-links">
+            <ul>
+                <li><a href="recipes/greekyogurt.html">Greek Yogurt</a></li>
+                <li><a href="recipes/grilledchicken.html">Grilled Chicken</a></li>
+                <li><a href="recipes/omelette.html">Omelette</a></li>
+            </ul>
+        </div>
 
     </body>
 </html>
